--- a/backend/.env
+++ b/backend/.env
@@ -4,5 +4,5 @@ PORT=8000
 # MongoDB Connection
 MONGO_URI=mongodb+srv://faizan:faizan@cluster0.gm0lq4k.mongodb.net/
 
-
-
+# JWT Secret Key
+JWT_SECRET=mySuperSecretKey123
